# TrainTickets

./: .gitignore  README.md  appinfo.json
android/app/: build.gradle
android/app/src/androidTest/java/pt/rdias/traintickets/: ApplicationTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/pt/rdias/traintickets/: Ticket.java  TicketClass.java  TicketListAdapter.java  TicketManager.java  TicketParser.java  TrainTicketReceiver.java  TrainTicketsActivity.java  Util.java
android/app/src/main/java/pt/rdias/traintickets/pebble/: PebbleMessage.java  PebbleTicket.java  PebbleTicketSection.java
android/app/src/main/res/layout/: activity_train_tickets.xml  ticketlistitem.xml
android/app/src/main/res/menu/: menu_train_tickets.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/values-v21/: styles.xml
pebble/: CMakeLists.txt
pebble/src/: ticket_protocol.c  traintickets.c
src/: hello_world.c  ticket_protocol.c  ticket_protocol.h  traintickets.c
